# splatquery

./: .gitignore  Cargo.toml  README.md  build.rs  gen_i18n.py
.github/workflows/: ci.yml
resources/assets/: font  img
resources/assets/i18n/: en-US.json  ja-JP.json  zh-CN.json
resources/assets/svg/: pvp.2-1.jinja  pvp.mobile.jinja  pvp.pc.jinja
resources/test/: splat3ink_gear_response.json  splat3ink_schedules_fest_response.json  splat3ink_schedules_response.json
src/: errors.rs  lib.rs
src/action/: config.rs  infolog.rs  mod.rs  webpush.rs
src/api/: action.rs  config.rs  geoip2.rs  jwt.rs  mod.rs  query.rs  state.rs  user.rs
src/api/action/: mod.rs  webpush.rs
src/api/auth/: google.rs  mod.rs
src/database/: action.rs  mod.rs  pvp.rs  query.rs  user.rs
src/image/: mod.rs
src/renderer/: mod.rs
src/splatnet/: gear.rs  i18n.rs  iso8601.rs  mod.rs  schedules.rs  spider.rs
web/: .env.development  .env.production  .gitignore  README.md  index.html  package.json  tailwind.config.js  vite.config.js
web/api/: index.js
web/public/: manifest.json  sw.js
web/src/: App.vue  main.js  router.js  sw.js  utils.js  webpush.js
web/src/assets/css/: base.css  font.css  multi-select.css
web/src/assets/i18n/: en-US.json  index.mjs
web/src/auth/: Google.vue  index.js
web/src/components/: ActionCard.vue  Card.vue  CoopQuery.vue  Loading.vue  LoadingCircle.vue  MessageQueue.vue  MultiSelect.vue  PVPQuery.vue  PVPQueryCardBody.vue  QueryCard.vue  Select.vue  ServerDown.vue  Toggle.vue  WebPushActionCard.vue
web/src/pages/: EditQuery.vue  Home.vue  ListActions.vue  ListQueries.vue  ListQuery.vue  NewQuery.vue  Pwa.vue  Settings.vue
