[package]
name = "splatquery"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"

[[bin]]
name = "server"
required-features = ["api"]

[features]
default = ["webpush"]
api = [
  "dep:axum",
  "dep:axum-auth",
  "dep:axum-server",
  "dep:http",
  "dep:tower-http",
  "dep:jsonwebtoken",
]
api-auth-google = ["api"]
webpush = ["dep:web-push"]

[dependencies]
appendlist = { git = "https://github.com/xlnx/appendlist.git" }
async-trait = "0.1.68"
axum = { version = "0.6.18", features = ["headers"], optional = true }
axum-auth = { version = "0.4.0", optional = true }
axum-server = { version = "0.5.1", features = ["tls-rustls"], optional = true }
base64 = "0.13.1"
chrono = "0.4.26"
derivative = "2.2.0"
env_logger = "0.10.0"
futures = "0.3.28"
http = { version = "0.2.9", optional = true }
itertools = "0.11.0"
jsonwebtoken = { version = "8.3.0", optional = true }
log = "0.4.19"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
reqwest = { version = "0.11.18", features = ["json"] }
rusqlite = "0.29.0"
serde = { version = "1.0.164", features = ["derive"] }
serde-enum-str = "0.3.2"
serde_json = "1.0.97"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.4.1", features = ["cors"], optional = true }
web-push = { version = "0.9.5", optional = true }

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld", "-C", "prefer-dynamic"]

[profile.release]
strip = "debuginfo"
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
