[package]
name = "splatquery"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"

[[bin]]
name = "server"
required-features = ["api"]

[features]
default = []
api = [
  "dep:axum",
  "dep:axum-auth",
  "dep:axum-server",
  "dep:http",
  "dep:tower-http",
  "dep:jsonwebtoken",
]
api-auth-google = ["api"]
webpush = ["api", "dep:web-push"]
renderer = [
  "dep:resvg",
  "dep:ttl_cache",
  "dep:minijinja",
  "dep:walkdir",
  "dep:image",
]
full = ["api", "api-auth-google", "webpush", "renderer"]

[dependencies]
appendlist = { git = "https://github.com/xlnx/appendlist.git" }
async-trait = "0.1.68"
axum = { version = "0.6.18", features = ["headers"], optional = true }
axum-auth = { version = "0.4.0", optional = true }
axum-server = { version = "0.5.1", features = ["tls-rustls"], optional = true }
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = "0.13.1"
chrono = "0.4.26"
derivative = "2.2.0"
env_logger = "0.10.0"
erased-serde = "0.3.27"
futures = "0.3.28"
http = { version = "0.2.9", optional = true }
image = { version = "0.24.6", default-features = false, features = [
  "jpeg",
], optional = true }
itertools = "0.11.0"
jsonwebtoken = { version = "8.3.0", optional = true }
log = "0.4.19"
minijinja = { version = "1.0.4", optional = true, features = ["loader"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
reqwest = { version = "0.11.18", features = ["json"] }
resvg = { version = "0.35.0", optional = true }
serde = { version = "1.0.164", features = ["derive"] }
serde-enum-str = "0.3.2"
serde_json = "1.0.97"
strum = "0.25.0"
strum_macros = "0.25.1"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.4.1", features = ["cors", "fs"], optional = true }
ttl_cache = { version = "0.5.1", optional = true }
walkdir = { version = "2.3.3", optional = true }
web-push = { version = "0.9.5", optional = true }

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld", "-C", "prefer-dynamic"]

[profile.release]
strip = "debuginfo"
lto = true

[profile.dev]
debug = 0

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
